--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
             <img src="images/hangman-0.svg" alt="hangman-img">
             <h1>Hangman Game</h1>
         </div>
+        <div class="game-over">
+            <ul class="word-display">
+                <li class="letter"></li>
+                <li class="letter"></li>
+                <li class="letter"></li>
+                <li class="letter"></li>
+                <li class="letter"></li>
+                <li class="letter"></li>
+                <li class="letter"></li>
+            </ul>
+        </div>
+        <h4 class="hint-text">
+            Hint:
+            <b>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</b>
+        </h4>
+        <h4 class="guesses-text">
+            Incorrect guesses:
+            <b>0 / 6</b>
+        </h4>
+        <div class="keyboard">
+            <button>a</button><button>b</button><button>c</button><button>d</button><button>e</button><button>f</button><button>g</button><button>h</button><button>i</button><button>j</button><button>k</button><button>l</button><button>m</button><button>n</button><button>o</button><button>p</button><button>q</button><button>r</button><button>s</button><button>t</button><button>u</button><button>v</button><button>w</button><button>x</button><button>y</button><button>z</button>
+        </div>
     </div>
 </body>
 </html>
