--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hangman Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="hangman-box">
@@ -16,24 +18,25 @@
             <ul class="word-display">
                 <li class="letter"></li>
                 <li class="letter"></li>
-                <li class="letter"></li>
+                <li class="letter guessed">a</li>
                 <li class="letter"></li>
                 <li class="letter"></li>
                 <li class="letter"></li>
                 <li class="letter"></li>
             </ul>
-        </div>
-        <h4 class="hint-text">
-            Hint:
-            <b>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</b>
-        </h4>
-        <h4 class="guesses-text">
-            Incorrect guesses:
-            <b>0 / 6</b>
-        </h4>
-        <div class="keyboard">
-            <button>a</button><button>b</button><button>c</button><button>d</button><button>e</button><button>f</button><button>g</button><button>h</button><button>i</button><button>j</button><button>k</button><button>l</button><button>m</button><button>n</button><button>o</button><button>p</button><button>q</button><button>r</button><button>s</button><button>t</button><button>u</button><button>v</button><button>w</button><button>x</button><button>y</button><button>z</button>
+            <h4 class="hint-text">
+                Hint:
+                <b>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</b>
+            </h4>
+            <h4 class="guesses-text">
+                Incorrect guesses:
+                <b>0 / 6</b>
+            </h4>
+            <div class="keyboard">
+                <button>a</button><button>b</button><button>c</button><button>d</button><button>e</button><button>f</button><button>g</button><button>h</button><button>i</button><button>j</button><button>k</button><button>l</button><button>m</button><button>n</button><button>o</button><button>p</button><button>q</button><button>r</button><button>s</button><button>t</button><button>u</button><button>v</button><button>w</button><button>x</button><button>y</button><button>z</button>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
