Styling buttons with correct word

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="images/hangman-0.svg" alt="hangman-img">
             <h1>Hangman Game</h1>
         </div>
-        <div class="game-over">
+        <div class="game-box">
             <ul class="word-display">
                 <li class="letter"></li>
                 <li class="letter"></li>
