--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hangman Game</title>
     <link rel="stylesheet" href="style.css">
+    <script src="word-list.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -24,15 +26,7 @@
             <h1>Hangman Game</h1>
         </div>
         <div class="game-box">
-            <ul class="word-display">
-                <li class="letter"></li>
-                <li class="letter"></li>
-                <li class="letter guessed">a</li>
-                <li class="letter"></li>
-                <li class="letter"></li>
-                <li class="letter"></li>
-                <li class="letter"></li>
-            </ul>
+            <ul class="word-display"></ul>
             <h4 class="hint-text">
                 Hint:
                 <b>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</b>
@@ -46,6 +40,5 @@
         </div>
     </div>
 </body>
-<script src="word-list.js" defer></script>
-<script src="script.js" defer></script>
+
 </html>
